# hackthon2026

./: .env.example  LICENSE  README.md  docker-compose.yml
.github/workflows/: main.yml
Backend/Java/: dockerfile  pom.xml
Backend/Python/: .env.example  .gitignore  dockerfile  pyproject.toml
Backend/Python/app/DTOs/: analysis_dto.py
Backend/Python/app/config/: config.py
Backend/Python/app/controllers/: analysis_controller.py
Backend/Python/app/routes/: analysis_router.py
Backend/Python/app/services/: ml_service.py
Docs/: Database.sql  auditoria-sockets-streaming.md
Frontend/: .dockerignore  .env.example  AGENTS.md  CAMERA_IMPROVEMENTS.md  dockerfile  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.app.json  tsconfig.json
Frontend/.agents/skills/create-react-component/: SKILL.md
Frontend/.agents/skills/lint-fix/: SKILL.md
Frontend/.agents/skills/refactor-component/: SKILL.md
Frontend/.agents/skills/verify-implementation/: SKILL.md
Frontend/docs/agent-guides/: frontend-guidelines.md
Frontend/src/: App.tsx  config.ts  index.css  main.tsx
Frontend/src/components/: ProtectedRoute.tsx  Spinner.tsx  spinner.css
Frontend/src/components/chat/: BirdHammerChat.tsx  CameraModal.tsx  ChatHeader.tsx  ChatInputBar.tsx  ChatLauncher.tsx  ChatMessageBubble.tsx  ChatMessages.tsx  ChatOverlay.tsx  chat.css  (+3 more)
Frontend/src/constants/: labels.ts
Frontend/src/hooks/: useChat.ts
Frontend/src/services/: chatService.ts  http.service.ts
Frontend/src/types/: chat.ts
database/: dockerfile  init.sql
(+165 files in other folders)
