[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "opencv-python>=4.13.0.92",
    "python-dotenv>=1.2.2",
    "supabase>=2.28.2",
    "tensorflow-cpu>=2.21.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "uvicorn==0.41.0",
    "python-multipart>=0.0.6",
    "requests==2.32.5",
    "opencv-python>=4.8.0",
    "ultralytics>=8.0.0",
    "numpy>=1.24.0",
    "psycopg2>=2.9.11",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.8",
]
